--- a/src/assets/sass/_style.scss
+++ b/src/assets/sass/_style.scss
@@ -238,6 +238,7 @@
         border-bottom: 1px solid #A8B3BD;
         padding: 0 30px;      
         display: flex;  
+        opacity: 0;
     }
     .step-item{
         height: 100%;
@@ -362,6 +363,7 @@
             display: flex;
             gap: 8px;
         }
+        opacity: 0;
     }
     .btn-targeting{
         display: inline-flex;
@@ -558,11 +560,18 @@
                 appearance: none;            
                 outline: none;             
                 display: none;
+                + .btn-radio{
+                    &:hover{
+                        border: 2px solid modules.$color_primary;
+                        color: modules.$color_primary;
+                    }
+                }
             }
             input[type='radio']:checked {
                  + .btn-radio{
                     border: 2px solid modules.$color_primary;
                     color: modules.$color_primary;
+                    background-color: #FEF3F9;
                 }
             }
 
@@ -736,6 +745,9 @@
             font-size: 13px;
             font-weight: 500;
             color: #3B4044;
+            &.td-left{
+                text-align: left;
+            }
         }
         .td-col{             
             padding: 0 5px;         
