--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,5 +1,5 @@
 @use "vue-select/dist/vue-select.css";
-@use 'floating-vue/dist/style.css' as floatingStyle;
+@use 'tippy.js/dist/tippy.css';
 @use "common";
 @use "animation";
 @use "override";
