--- a/src/assets/sass/_common.scss
+++ b/src/assets/sass/_common.scss
@@ -376,31 +376,6 @@ input:-webkit-autofill:active {
   border: none !important;
 }
 
-.ml-8 {
-  margin-left: 8px;
-}
-.ml20 {
-  margin-left: 20px;
-}
-.ml30 {
-  margin-left: 30px;
-}
-.pt35 {
-  padding-top: 35px;
-}
-.mt35 {
-  margin-top: 35px;
-}
-.pb0 {
-  padding-bottom: 0 !important;
-}
-.mb0 {
-  margin-bottom: 0 !important;
-}
-.ml0 {
-  margin-left: 0 !important;
-}
-
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -488,8 +463,35 @@ input::-webkit-inner-spin-button {
   }
 }
 
+.ml-8 {
+  margin-left: 8px;
+}
+.ml20 {
+  margin-left: 20px;
+}
+.ml30 {
+  margin-left: 30px;
+}
+.pt35 {
+  padding-top: 35px;
+}
+.mt35 {
+  margin-top: 35px;
+}
+.pb0 {
+  padding-bottom: 0 !important;
+}
+.mb0 {
+  margin-bottom: 0 !important;
+}
+.ml0 {
+  margin-left: 0 !important;
+}
 .mt16{
   margin-top: 16px !important;
+}
+.mt32{
+  margin-top: 32px !important;
 }
 
 /************** 
